[package]
name = "dicom-viewer-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
#opt-level = 's'

[dependencies]
console_error_panic_hook = "0.1.7"
dicom-core = "0.8.1"
dicom-dictionary-std = "0.8.0"
dicom-object = "0.8.1"
dicom-pixeldata = { version = "0.8.1", features = ["image"] }
js-sys = "0.3.77"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.100"
wasm-bindgen-rayon = "1.3.0"
web-sys = { version = "0.3.77", features = ["Window", "Document", "HtmlElement", "FileReader", "FileList", "File", "Event", "HtmlInputElement", "HtmlCanvasElement","CanvasRenderingContext2d", "ImageData", "console", "Text"] }
web-time = "1.1.0"
